Version 1.0.11

- Add Ability To Backup Single Notebook Or Single Folder
- Add List Share Email Addresses
- Add Removing Share Email Addresses
- Add Reseting Screen To Default
- Add Ability To Reload Device
- Add Different Menu Modes
- Add Ability To Login With SSH Key


Version 1.0.10

- Bugfixes
- UI Package Updates
- Notification Improvements

Version 1.0.9

- Bugfixes

Version 1.0.6

- Performance improvements
- Design fixes
- Bugfixes
- Settings added
- Reupload screen images