@@ -7,6 +7,7 @@ Version 1.0.11
 - Add Ability To Reload Device
 - Add Different Menu Modes
 - Add Ability To Login With SSH Key
+- Add Ability To See If Notebook Is Pinned
 
 
 Version 1.0.10
